# yal

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  Trunk.toml  dev.sh  styles.css
.github/workflows/: publish.yml
crates/lightsky/: Cargo.toml
crates/lightsky-sys/: Cargo.toml
crates/lightsky-sys/src/: lib.rs
crates/lightsky/examples/: change_space.rs  list_windows.rs  move_window.rs
crates/lightsky/src/: lib.rs
crates/yal-config/: Cargo.toml
crates/yal-config/src/: lib.rs
crates/yal-core/: Cargo.toml
crates/yal-core/src/: lib.rs
crates/yal-plugin/: Cargo.toml
crates/yal-plugin-protocol/: Cargo.toml
crates/yal-plugin-protocol/src/: lib.rs
crates/yal-plugin/src/: backend.rs  deps.rs  lib.rs  manager.rs  plugin.rs  protocol.rs
crates/yal-plugin/src/manager/: config.rs
crates/yal-theme/: Cargo.toml
crates/yal-theme/src/: lib.rs
crates/yal-watcher/: Cargo.toml
crates/yal-watcher/src/: lib.rs
docs/: plugins.md  yal-std.md
src/: app.rs  bridge.rs  main.rs  prompt.rs  ui.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: actor.rs  application_tree.rs  cmd.rs  common.rs  config.rs  config_watcher.rs  display.rs  focus.rs  lib.rs  main.rs  ns_watcher.rs  plugin.rs  plugin_api.rs  router.rs  window.rs
src-tauri/src/actor/: plugin_actor.rs
src-tauri/src/ax/: application_tree.rs  display.rs  focus.rs  mission_control_emu.rs  mod.rs  permissions.rs
src-tauri/src/cmd/: app.rs  hide.rs  switch.rs  theme.rs
src-tauri/src/common/: actor.rs
src/app/: filtering.rs  list.rs
src/bridge/: events.rs  invoke.rs
src/prompt/: fields.rs  form.rs  markdown.rs  render_node.rs
src/utils/: focus.rs  keys.rs
yal-backend/: Cargo.toml
yal-backend/src/: common.rs  config.rs  config_watcher.rs  focus.rs  frontend_middleware.rs  lib.rs  ns_watcher.rs  plugin.rs  plugin_backend.rs
yal-backend/src/ax/: mod.rs
yal-backend/src/cmd/: app.rs
