[package]
name = "yal-ui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
yal-core = { path = "./crates/yal-core" }
fuzzy-matcher = "0.3.7"
serde_json = "1.0.145"
log = "0.4.28"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlCollection",
  "Event",
  "NodeList",
  "KeyboardEvent",
  "EventTarget",
]

[workspace]
members = ["src-tauri","crates/yal-core", "crates/lightsky-sys", "crates/lightsky", "crates/yal-theme", "crates/yal-watcher", "crates/yal-plugin" , "crates/yal-config" ]
