[package]
name = "yal"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1.7.4"
walkdir = "2.5.0"
dirs = "6.0.0"
base64 = "0.21"
icns = "0.3"
image = { version = "0.24", default-features = false, features = ["png"] }
objc2 = "0.6.2"
objc2-foundation = "0.3.1"
objc2-app-kit = "0.3.1"
toml = "0.9.5"
notify = "8.2.0"
yal-core = { path = "../crates/yal-core" }
core-foundation = { version = "0.10.1", features = ["mac_os_10_8_features"] }
core-graphics = { version = "0.25.0", features = ["highsierra"] }
tauri-plugin-log = "2"
log = "0.4.28"
once_cell = "1.21.3"
lightsky = { path = "../crates/lightsky" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
