[package]
name = "yal"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1.7.4"
walkdir = "2.5.0"
dirs = "6.0.0"
base64 = "0.21"
icns = "0.3"
image = { version = "0.24", default-features = false, features = ["png"] }
objc2 = "0.6.2"
objc2-foundation = "0.3.1"
objc2-app-kit = "0.3.1"
notify = "8.2.0"
yal-core = { path = "../crates/yal-core" }
core-foundation = { version = "0.10.1", features = ["mac_os_10_8_features"] }
core-graphics = { version = "0.25.0", features = ["highsierra"] }
tauri-plugin-log = "2"
log = "0.4.28"
once_cell = "1.21.3"
lightsky = { path = "../crates/lightsky" }
yal-theme = { path = "../crates/yal-theme" }
tauri-plugin-macos-permissions = "2.3.0"
async-channel = "2.5.0"
kameo = "0.18.0"
anyhow = "1.0.100"
futures = "0.3.31"
notify-debouncer-mini = "0.7.0"
block2 = "0.6.2"
tokio = { version = "1.47.1", features = ["time"] }
objc2-core-foundation = "0.3.2"
yal-plugin = { path = "../crates/yal-plugin" }
kanal = "0.1.1"
yal-config = { path = "../crates/yal-config" }
whirlwind = "0.1.1"
nanoid = "0.4.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
