[package]
name = "lightsky"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bitflags = "2.9.4"
core-foundation = "0.10.1"
core-graphics = { version = "0.25.0", features = ["highsierra"] }
lightsky-sys = { path = "../lightsky-sys" }

[[example]]
name = "list_windows"
path = "examples/list_windows.rs"
