[package]
name = "yal-plugin"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
git2 = "0.20.2"
log = "0.4.28"
mlua = { version = "0.11.4", features = ["async", "lua54", "vendored", "anyhow", "serialize", "send"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["fs", "sync"] }
toml = "0.9.7"
yal-core = { path = "../yal-core" }
