[package]
name = "yal-plugin"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
dirs = "6.0.0"
futures = "0.3.31"
git2 = "0.20.2"
kanal = "0.1.1"
log = "0.4.28"
mlua = { version = "0.11.4", features = ["async", "lua54", "vendored", "anyhow", "serialize", "send"]}
nanoid = "0.4.0"
parking_lot = "0.12.5"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["fs", "sync"] }
yal-core = { path = "../yal-core" }
yal-config = { path = "../yal-config" }
